--- a/peixun/0514/龙芯杯第四届全国大学生计算机系统能力培养大赛——第一次线上培训.md
+++ b/peixun/0514/龙芯杯第四届全国大学生计算机系统能力培养大赛——第一次线上培训.md
@@ -1,5 +1,21 @@
 # "龙芯杯"第四届全国大学生计算机系统能力培养大赛——第一次线上培训
 
+全国大学生计算机系统能力培养大赛是由教育部高等学校计算机类专业教学指导委员会和系统能力培养研究专家组共同发起，以学科竞赛推动专业建设和计算机领域创新人才培养体系改革、培育我国高端芯片及核心系统的技术突破与产业化后备人才为目标，面向高校大学生举办的全国性大赛。大赛旨在选拔未来我国计算机系统的设计、分析、优化与应用人才，激发学生的想象力、创新力和工程实践能力并培养其团队协作精神，以赛促学、以赛促教，为高质量专业人才搭建交流、展示、合作的平台，助力我国高校与企业产学研合作的健康快速发展。
+
+本次大赛由中央网信办信息化发展局指导，由全国高等学校计算机教育研究会 、中国互联网发展基金会、系统能力培养研究项目示范高校联合主办，由西北工业大学承办，由龙芯中科技术有限公司、赛灵思（Xilinx）公司、机械工业出版社华章分社、中国计算机学会体系结构专委会共同协办。
+
+<img src="./img/nscscc2019.jpg" width="500px" />
+
+<img src="./img/nscscc2018.png" width="500px" />
+
+<center>图注：“龙芯杯”第二届、第三届大赛合影</center>
+
+对于初次参加竞赛的队员可能对赛制或技术方案理解各有不同，为防止理解出现偏颇。对此，大赛组委会特此举行赛前培训为参赛队员答疑解惑，更快的上手竞赛设备。
+
+## 面向群体
+
+有意愿参与此次竞赛的普通高等学校全日制在校本科生
+
 ## 时间
 
 2020年5月14日  14：00 - 18：00
